@@ -568,6 +568,16 @@
               </md-checkbox>
             </div>
 
+            <div>
+              <md-checkbox
+                  ng-model="app.preferences.defaults.SOGoMailFetchAllUnseenCountFolders"
+                  ng-true-value="1"
+                  ng-false-value="0"
+                  label:aria-label="Fetch count of unseen messages for all mailboxes">
+                <var:string label:value="Fetch count of unseen messages for all mailboxes"/>
+              </md-checkbox>
+            </div>
+
             <div class="ng-hide">
               <md-checkbox
                   ng-model="app.preferences.defaults.SOGoMailSortByThreads"
